[SQL] All module specific tests working